Added logs at code checkpoints

--- a/ndn_python_catalog/ndn-python-catalog.conf
+++ b/ndn_python_catalog/ndn-python-catalog.conf
@@ -6,3 +6,6 @@ db_config:
   db_type: 'sqlite3'
   sqlite3:
     'path': '~/.ndn/ndn-python-catalog/sqlite3.db'
+
+logging_config:
+  'level': 'INFO'
